# zoom-search

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
docs/: advanced-configuration.md  agent-integration.md  benchmarks.md  development.md
examples/: conversation_history.py  demo_mode.py  langgraph_tool.py  streaming.py
tests/: test_api_workflow.py  test_golden_tests_catalog.py  test_import.py  test_llm_provider_common.py  test_llm_provider_dedicated_adapters.py  test_mcp_server.py  test_rewriting.py  test_search_provider_common.py  test_search_workflow.py  test_synthesis.py  test_validation.py
tools/: check_golden_tests.py  check_regression_benchmarks.py
zoom_search/: __init__.py  api.py  demo.py  errors.py  evidence.py  mcp_server.py  metrics.py  models.py  results.py  retry.py  rewriting.py  synthesis.py  testing.py  traceability.py  transport.py  validation.py
zoom_search/orchestration/: runtime.py
zoom_search/providers/: __init__.py  capabilities.py  llm.py  resolver.py  search.py
zoom_search/search/: __init__.py  domain.py  zoom_out.py  zoomin.py
