[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "zoom_search"
version = "0.1.0"
description = "Two-phase AI-assisted search library with zoom-out and zoom-in workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "MonkeyCode" }
]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
