[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "zoom-search"
version = "0.1.5"
description = "Two-phase AI-assisted search library with zoom-out and zoom-in workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "goofrey" }
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.28.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
mcp = [
  "mcp>=1.28.0",
]

[project.scripts]
zoom-search-mcp = "zoom_search.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
